feat: add if statement to check if toc exists

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -31,12 +31,14 @@
   </div>
 
   {# content #}
-  <aside>
-    <details class="c-article-section__toc">
-        <summary><span>📚</span>Table of contents</summary>
-        {{ content | toc | safe }}
-    </details>
-  </aside>
+  {% if content | toc | safe | length %}
+    <aside>
+      <details class="c-article-section__toc">
+          <summary><span>📚</span>Table of contents</summary>
+          {{ content | toc | safe }}
+      </details>
+    </aside>
+  {% endif %}
 
   <div class="c-article-section__content">
     {{ content | safe }}
