Feature/theme switcher

--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -1,6 +1,10 @@
 <footer class="c-footer">
   <div class="l-main">
     <div class="c-footer__group">
+      <div class="c-footer__theme-switcher">
+        {%- include "_includes/layouts/partials/theme-switcher.njk" %}
+      </div>
+
       <a class="c-footer__item" href="https://twitter.com/giulia_chiola" target="_blank">
         {% include global.svgoPath + 'twitter.svg' %}
       </a>
