--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -15,7 +15,7 @@
   {% if card.hasImg and card.data.mainTag %}
     <div class="c-card__img-wrapper">
       {# check if SVG exists, otherwise 11ty build explodes! #}
-      {% if card.data.mainTag in ['git', 'vuejs', 'js', 'vsc', 'css', 'nodejs', 'design-system', 'static-site-generator', 'markdown', 'mac-os', 'template-engine'] %}
+      {% if card.data.mainTag in ['css', 'design-system', 'git', 'github', 'gitlab', 'js', 'mac-os', 'markdown', 'nodejs', 'static-site-generator', 'svg', 'template-engine', 'shell', 'vuejs'] %}
         {% include global.svgoPath + card.data.mainTag + '.svg' %}
       {% else %}
         {% include global.svgoPath + 'reindeer.svg' %}
