--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -1,3 +1,16 @@
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "TechArticle",
+  "proficiencyLevel": "Beginner",
+  "author": "Giulia Chiola",
+  "datePublished": "{{ articleDate }}",
+  "headline": "{{ title }}",
+  "abstract": "{{ abstract }}",
+  "dateModified": "{{ page.date }}",
+}
+</script>
+
 <article class="c-article-section l-spacing-l {% if isCustomPost %}c-article-section--custom{% endif %}">
   <h1>{{ title }}</h1>
 
