--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -5,16 +5,16 @@
         {%- include "_includes/layouts/partials/theme-switcher.njk" %}
       </div>
 
-      <a class="c-footer__item" href="https://twitter.com/giulia_chiola" target="_blank">
+      <a class="c-footer__link" href="https://twitter.com/giulia_chiola" target="_blank" rel="noopener">
         {% include global.svgoPath + 'twitter.svg' %}
       </a>
-      <a class="c-footer__item" href="https://gitlab.com/giuliach" target="_blank">
+      <a class="c-footer__link" href="https://gitlab.com/giuliach" target="_blank" rel="noopener">
         {% include global.svgoPath + 'gitlab.svg' %}
       </a>
-      <a class="c-footer__item" href="https://github.com/giuliachiola" target="_blank">
+      <a class="c-footer__link" href="https://github.com/giuliachiola" target="_blank" rel="noopener">
         {% include global.svgoPath + 'github.svg' %}
       </a>
-      <a class="c-footer__item" href="https://codepen.io/giuliachiola/pens/public" target="_blank">
+      <a class="c-footer__link" href="https://codepen.io/giuliachiola/pens/public" target="_blank" rel="noopener">
         {% include global.svgoPath + 'codepen.svg' %}
       </a>
     </div>
