docs: add prismjs theme documentation

--- a/css/prismjs-theme.css
+++ b/css/prismjs-theme.css
@@ -1,6 +1,7 @@
 /**
  * Shades of Purple Theme for Prism.js
  *
+ * https://raw.githubusercontent.com/PrismJS/prism-themes/master/themes/prism-shades-of-purple.css
  * @author Ahmad Awais <https://twitter.com/MrAhmadAwais/>
  * @support Follow/tweet at https://twitter.com/MrAhmadAwais/
  */
