--- a/_includes/layouts/partials/header.njk
+++ b/_includes/layouts/partials/header.njk
@@ -2,8 +2,8 @@
 
 <header class="c-header">
   <nav class="c-header__nav l-main">
-    <input class="c-header__toggle" type="checkbox" name="checkbox" id="checkboxId" value="value"/>
-    <label class="c-header__hamburger" for="checkboxId"></label>
+    <input class="c-header__toggle" type="checkbox" name="checkbox" id="headerToggle" value="value"/>
+    <label class="c-header__hamburger" for="headerToggle"></label>
     <ul class="c-header__list">
       {%- for entry in navPages %}
         <li class="c-header__item">
