Resolve "styleguide -> blog"

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -57,7 +57,9 @@
       {% include 'layouts/partials/footer.njk' %}
     </div>
 
-    {# script #}
-    <script src="/js/script.js"></script>
+    {# script for 11ty only #}
+    <script src="/js/main.js"></script>
+    {# scripts from styleguide #}
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
