--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -4,7 +4,7 @@
   "@type": "TechArticle",
   "proficiencyLevel": "Beginner",
   "author": "Giulia Chiola",
-  "datePublished": "{{ articleDate }}",
+  "datePublished": "{{ date }}",
   "headline": "{{ title }}",
   "abstract": "{{ abstract }}",
   "dateModified": "{{ page.date }}",
@@ -18,7 +18,7 @@
     <div class="c-article-section__info">
       {# date #}
       {% if not isCustomPost %}
-        <time class="c-article-section__date" datetime="{{ articleDate | htmlDateString }}">{{ articleDate | htmlDateString('human-readable') }}</time>
+        <time class="c-article-section__date" datetime="{{ date | htmlDateString }}">{{ date | htmlDateString('human-readable') }}</time>
       {% endif %}
       {# reading time #}
       {% if not isCustomPost %}
@@ -69,7 +69,7 @@
   {% if not isCustomPost %}
     <div class="c-article-section__bottom">
       {# last updated date #}
-      {% if page.date !== articleDate %}
+      {% if page.date !== date %}
         <footer class="c-article-section__date">Last updated <time datetime="page.date">{{ page.date | htmlDateString('human-readable') }}</time></footer>
       {% endif %}
 
