--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -10,7 +10,7 @@
   {% endfor %}
 {% endif %}
 
-{% set articleDate = card.data.articleDate or page.articleDate %}
+{% set date = card.data.date or page.date %}
 
 <script type="application/ld+json">
 {
@@ -18,14 +18,14 @@
   "@type": "TechArticle",
   "proficiencyLevel": "Beginner",
   "author": "Giulia Chiola",
-  "datePublished": "{{ articleDate }}",
+  "datePublished": "{{ date }}",
   "headline": "{{ card.data.title }}",
   "abstract": "{{ card.data.abstract }}",
   "dateModified": "{{ card.data.date }}",
 }
 </script>
 
-<article class="c-card {{ modifiers }} {{ mainTag }}" itemscope>
+<article class="c-card {{ modifiers }} {{ mainTag }} {% if card.spacingClass %}{{ card.spacingClass }}{% endif %}" itemscope>
   {% if card.hasImg and card.data.mainTag %}
     <div class="c-card__img-wrapper">
       {# check if SVG exists, otherwise 11ty build explodes! #}
@@ -64,7 +64,7 @@
 
     {# bottom info #}
     <div class="c-card__bottom">
-      <time class="c-card__date" datetime="{{ articleDate | htmlDateString }}">{{ articleDate | htmlDateString('human-readable') }}</time>
+      <time class="c-card__date" datetime="{{ date | htmlDateString }}">{{ date | htmlDateString('human-readable') }}</time>
       <div class="c-card__tags">
         {% for tag in card.data.tags %}
           {% set tagUrl %}/tags/{{ tag }}/{% endset %}
