feat: remove 'mainLayout' property, reuse categoryFilter instead

--- a/_includes/layouts/partials/cards-grid.njk
+++ b/_includes/layouts/partials/cards-grid.njk
@@ -6,7 +6,7 @@
   {# items #}
   <div class="l-spacing-l">
 
-    {% if mainLayout == 'grid' %}
+    {% if categoryFilter == 'tutorials' %}
       <div class="o-cards-grid">
         {%- include "_includes/layouts/partials/cards.njk" %}
       </div>
