fix: remove trailing comma in JSON-LD, add social image in JSON-LD

--- a/_includes/layouts/meta.njk
+++ b/_includes/layouts/meta.njk
@@ -1,4 +1,5 @@
 {# social image #}
+{# note that social image is copied-pasted also in card.njk and article-section.njk #}
 {% set socialImg = '' %}
 {% if title|length %}
   {%- set socialImg %}{{ global.url }}/social-img/{{ title | slug }}.png{% endset-%}
