--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -1,3 +1,9 @@
+{# social image #}
+{% set socialImg = '' %}
+{% if title|length %}
+  {%- set socialImg %}{{ global.url }}/social-img/{{ title | slug }}.png{% endset-%}
+{% endif %}
+
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -8,6 +14,7 @@
   "headline": "{{ title }}",
   "abstract": "{{ abstract }}",
   "dateModified": "{{ page.date }}",
+  "image": "{{ socialImg }}"
 }
 </script>
 
