--- a/search.njk
+++ b/search.njk
@@ -17,7 +17,7 @@ eleventyNavigation:
   </form>
 
   <ul class="s-search-list">
-    {% for entry in collections.posts | reverse %}
+    {% for entry in collections.post | reverse %}
       <li class="j-search__item">
         {% set card = { data: entry.data, spacingClass: 'l-spacing-m', modifiers: ['squared-image', 'horizontal'], hasImg: true } %}
         {% include '_includes/layouts/partials/card.njk' %}
