--- a/_generate/social-img-build/pagesjson.njk
+++ b/_generate/social-img-build/pagesjson.njk
@@ -4,7 +4,7 @@ permalinkBypassOutputDir: true
 eleventyExcludeFromCollections: true
 ---
 [
-{%- for pages in collections.posts %}
+{%- for pages in collections.post %}
   {
     "title":"{{ pages.data.title | addNbsp | safe }}",
     "imgName":"{{ pages.data.title | slug }}"
