--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -37,7 +37,7 @@
   {% if card.hasImg and card.data.mainTag %}
     <div class="c-card__img-wrapper">
       {# check if SVG exists, otherwise 11ty build explodes! #}
-      {% if card.data.mainTag in ['css', 'design-system', 'git', 'github', 'gitlab', 'js', 'mac-os', 'markdown', 'nodejs', 'static-site-generator', 'svg', 'template-engine', 'shell', 'vuejs'] %}
+      {% if card.data.mainTag in ['css', 'design-system', 'git', 'github', 'gitlab', 'js', 'mac-os', 'markdown', 'nodejs', 'static-site-generator', 'svg', 'template-engine', 'shell', 'vuejs', 'vsc'] %}
         {% include global.svgoPath + card.data.mainTag + '.svg' %}
       {% else %}
         {% include global.svgoPath + 'reindeer.svg' %}
