feat: add critical css minifier

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -51,7 +51,7 @@
     {% endset %}
     {# feed it through our cssmin filter to minify #}
     <style>
-      {{ css | safe }}
+      {{ css | cssmin | safe }}
     </style>
   </head>
 
