--- a/_includes/layouts/partials/cards.njk
+++ b/_includes/layouts/partials/cards.njk
@@ -1,4 +1,7 @@
-{%- for entry in list | reverse -%}
+{# IMPORTANT: do not add the |reverse filter here.
+Please check notes in _includes/layouts/items-list.njk #}
+
+{%- for entry in list -%}
   {# card settings #}
   {% if categoryFilter == 'tutorials' %}
     {# tutorials #}
@@ -11,7 +14,14 @@
     {% set card = { data: entry.data, spacingClass: 'l-spacing-m', modifiers: ['highlight-left'], isExpanded: true } %}
   {% elif categoryFilter == 'til' %}
     {# til #}
-    {% set card = { data: entry.data, spacingClass: 'l-spacing-m', modifiers: ['highlight-top'], isExpanded: true, number: loop.revindex } %}
+    {# note: to set the TIL number we have to loop through all posts, not just the 10 items passed by pagination array #}
+    {% set number = '' %}
+    {% for item in collections.post|filterByCategory('til') %}
+      {% if item.data.title === entry.data.title %}
+        {% set number = loop.index %}
+      {% endif %}
+    {% endfor %}
+    {% set card = { data: entry.data, spacingClass: 'l-spacing-m', modifiers: ['highlight-top'], isExpanded: true, number: number } %}
   {% endif %}
 
   {# card #}
