--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -81,7 +81,7 @@
       {% endif %}
 
       {# tags #}
-      <ul class="c-article-section__tags">
+      <ul class="c-article-section__tags l-spacing-m">
         {%- for tag in tags %}
         {% set tagUrl %}/tags/{{ tag }}/{% endset %}
         <li class="c-article-section__tag">
