--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -87,11 +87,11 @@
     </div>
 
     {# script for 11ty only #}
-    <script src="/js/main.js"></script>
+    <script defer src="/js/main.js"></script>
     {# scripts from styleguide #}
     {% if category === 'tutorials' %}
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
     {% endif %}
-    <script src="/js/scripts.js"></script>
+    <script defer src="/js/scripts.js"></script>
   </body>
 </html>
