--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,12 +37,7 @@
     {% include 'layouts/meta.njk' %}
 
     {# css #}
-    <link rel="stylesheet" href="/css/prismjs-theme.css">
-    <link rel="stylesheet" href="/css/gist-syntax-theme.css">
-    {# css from styleguide repo #}
-    <link rel="stylesheet" href="/super-styleguide/src/css/style.css">
-    {# colors override to test #}
-    <link rel="stylesheet" href="/css/color-palette.css">
+    <link rel="stylesheet" href="/css/styles-bundle.css">
 
     {# critical css #}
     {# capture the CSS content as a Nunjucks variable #}
