Squashed commit of the following:
commit bb06e749d41c63d12efd7d155109ade41548e44a
Author: Giulia Chiola <giulia.chiola.17@gmail.com>
Date:   Sat Jan 2 15:34:34 2021 +0100

    feat: update styleguide

commit bcf81c7a1b16e2a4b5220c9eb4a4a00f72a9a064
Author: Giulia Chiola <giulia.chiola.17@gmail.com>
Date:   Sat Jan 2 15:31:59 2021 +0100

    feat: update color manifest

commit 1840487445e504b84a270bc44243bbf30df61a12
Author: Giulia Chiola <giulia.chiola.17@gmail.com>
Date:   Sat Jan 2 15:29:57 2021 +0100

    feat: remove base colors hex

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,11 +3,11 @@
   <head>
     {# Palette color #}
     {% set colors = [
-      { num: 1, hex: '#ef476f', lighten: '#f37694' },
-      { num: 2, hex: '#ffc233', lighten: '#ffd166' },
-      { num: 3, hex: '#06d6a0', lighten: '#17f8be' },
-      { num: 4, hex: '#1b98e0', lighten: '#45ade9' },
-      { num: 5, hex: '#ff9f1c', lighten: '#ffb54f' }
+      { num: 1, lighten: '#f37694' },
+      { num: 2, lighten: '#d7e5ff' },
+      { num: 3, lighten: '#adffe9' },
+      { num: 4, lighten: '#ace1ff' },
+      { num: 5, lighten: '#ffe3bd' }
     ] %}
     {% set randColor = colors | random %}
     {% set color = randColor %}
