Resolve "Update sitemap (netlify.app -> real website) e robots"

--- a/_includes/layouts/meta.njk
+++ b/_includes/layouts/meta.njk
@@ -20,4 +20,4 @@
 <meta name="twitter:image" content="{{ socialImg }}" />
 <meta name="twitter:creator" content="@giulia_chiola">
 <meta name="twitter:site" content="@giulia_chiola">
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
