feat: add mainEntityOfPage in structured data

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -14,7 +14,11 @@
   "headline": "{{ title }}",
   "abstract": "{{ abstract }}",
   "dateModified": "{{ page.date }}",
-  "image": "{{ socialImg }}"
+  "image": "{{ socialImg }}",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "{{ page.url }}"
+  }
 }
 </script>
 
