--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -14,7 +14,7 @@
 {% set date = card.data.date or page.date %}
 
 {# social image #}
-{% set socialImg = '' %}
+{# {% set socialImg = '' %}
 {% if title|length %}
   {%- set socialImg %}{{ global.url }}/social-img/{{ title | slug }}.png{% endset-%}
 {% endif %}
@@ -31,7 +31,7 @@
   "dateModified": "{{ card.data.date }}",
   "image": "{{ socialImg }}"
 }
-</script>
+</script> #}
 
 <article class="c-card {{ modifiers }} {{ mainTag }} {% if card.spacingClass %}{{ card.spacingClass }}{% endif %}" itemscope>
   {% if card.hasImg and card.data.mainTag %}
