feat: remove 'post' from array of tags

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -38,7 +38,7 @@
 
       {# tags #}
       <ul class="c-article-section__tags">
-        {%- for tag in tags %}
+        {%- for tag in tags|removeFromArray('post') %}
         {% set tagUrl %}/tags/{{ tag }}/{% endset %}
           <li class="c-article-section__tag">
             <a href="{{ tagUrl | url }}" class="c-label">{{ tag | removeDashes }}</a>
