feat: add footer copyrights + edit on GitLab

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -93,6 +93,10 @@
         <footer class="c-article-section__date">Last updated <time datetime="page.date">{{ page.date | htmlDateString('human-readable') }}</time></footer>
       {% endif %}
 
+      {# edit on gitlab #}
+      {% set inputPath = inputPath|replace('./super-blog-content/', '') %}
+      <a href="https://gitlab.com/giuliach/super-blog-content/-/blob/master/{{ inputPath }}"><small>Edit this page on GitLab</small></a>
+
       {# tags #}
       {% if tags %}
       <ul class="c-article-section__tags l-spacing-m">
