--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,7 +2,6 @@
 layout: layouts/base.njk
 ---
 <main class="l-main">
+  {% set inputPath = page.inputPath %}
   {% include 'layouts/partials/article-section.njk' %}
 </main>
-
-
