--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -5,18 +5,22 @@
         {%- include "_includes/layouts/partials/theme-switcher.njk" %}
       </div>
 
-      <a class="c-footer__link" href="https://twitter.com/giulia_chiola" target="_blank" rel="noopener" title="twitter">
-        {% include global.svgoPath + 'twitter.svg' %}
-      </a>
-      <a class="c-footer__link" href="https://gitlab.com/giuliach" target="_blank" rel="noopener" title="gitlab">
-        {% include global.svgoPath + 'gitlab.svg' %}
-      </a>
-      <a class="c-footer__link" href="https://github.com/giuliachiola" target="_blank" rel="noopener" title="github">
-        {% include global.svgoPath + 'github.svg' %}
-      </a>
-      <a class="c-footer__link" href="https://codepen.com/giuliachiola" target="_blank" rel="noopener" title="codepen">
-        {% include global.svgoPath + 'codepen.svg' %}
-      </a>
+      <p class="c-footer__copyright">© 2021 made with <span>♥️</span> by Giulia Chiola</p>
+
+      <div class="c-footer__socials">
+        <a class="c-footer__link" href="https://twitter.com/giulia_chiola" target="_blank" rel="noopener" title="twitter">
+          {% include global.svgoPath + 'twitter.svg' %}
+        </a>
+        <a class="c-footer__link" href="https://gitlab.com/giuliach" target="_blank" rel="noopener" title="gitlab">
+          {% include global.svgoPath + 'gitlab.svg' %}
+        </a>
+        <a class="c-footer__link" href="https://github.com/giuliachiola" target="_blank" rel="noopener" title="github">
+          {% include global.svgoPath + 'github.svg' %}
+        </a>
+        <a class="c-footer__link" href="https://codepen.com/giuliachiola" target="_blank" rel="noopener" title="codepen">
+          {% include global.svgoPath + 'codepen.svg' %}
+        </a>
+      </div>
     </div>
   </div>
 </footer>
