--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -64,7 +64,7 @@
     {% endif %}
   </div>
 
-  {# content #}
+  {# table of content (TOC) #}
   {# note: check if tags exist just to be sure that we are in an article post #}
   {% if tags and content | toc | safe | length %}
     <aside>
