feat: update TOC and header links

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -70,7 +70,12 @@
     <aside>
       <details class="c-article-section__toc">
           <summary><span>📚</span>Table of contents</summary>
-          {{ content | toc | safe }}
+          {# important:
+          replace(' #') (with a space before the hash!) to remove the hash added by markdown-it anchor plugin, but to not remove hash into the href link!
+          correct output: <a href="#editor">Editor</a>
+          previous wrong output: <a href="#editor">Editor #</a>
+          #}
+          {{ content | toc | safe | replace(' #', '') }}
       </details>
     </aside>
   {% endif %}
