--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -57,6 +57,9 @@
     <a class="c-card__title" href="{{ cardUrl }}" {% if card.data.externalUrl %}target="_blank" rel="noopener"{% endif %}>
       <h2 class="c-card__title-heading">{{ card.data.title }}</h2>
     </a>
+    {% if card.data.externalUrl %}
+      {% include global.svgoPath + 'external-link.svg' %}
+    {% endif %}
 
     {# abstract #}
     {% if not card.isExpanded %}
