feat: update theme switcher using light by default

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
   <head>
     {# IMPORTANT: we have to check localStorage as soon as page loads to prevent flickering #}
     <script>
-      const currentTheme = localStorage.getItem('theme')
+      const currentTheme = localStorage.getItem('theme') || 'light'
       document.documentElement.setAttribute('data-theme', currentTheme)
     </script>
     {# Palette color #}
