feat: add social images from giulia github (pr)

--- a/_generate/social-img-build/pagesjson.njk
+++ b/_generate/social-img-build/pagesjson.njk
@@ -3,10 +3,28 @@ permalink: ./pages.json
 permalinkBypassOutputDir: true
 eleventyExcludeFromCollections: true
 ---
+{% set colors = [
+  '#ef476f',
+  '#0d3b95',
+  '#06d6a0',
+  '#1b98e0',
+  '#ff9f1c'
+] %}
+
 [
 {%- for pages in collections.post %}
+  {% set randColor = colors | random %}
   {
-    "title":"{{ pages.data.title | addNbsp | safe }}",
+    "selectors": [
+      {
+        "selector": "#j-title",
+        "content":"{% if pages.data.title %}{{ pages.data.title | addNbsp | safe }}{% else %}11ty Rocks{% endif %}"
+      },
+      {
+        "selector": "#j-color",
+        "content":"{{ randColor }}"
+      }
+    ],
     "imgName":"{{ pages.data.title | slug }}"
   }{% if loop.last == false %},{% endif -%}
 {% endfor %}
